<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:checkedButton="@id/radioYou"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioFollowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="Following" />

        <RadioButton
            android:id="@+id/radioYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="You" />
    </RadioGroup>

</LinearLayout>