...
            android:text="vibes."
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/logoutButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />

        <androidx.appcompat.widget.AppCompatImageButton
...
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_people_white_36dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/main_profile_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/circle"
            app:srcCompat="@drawable/ic_person_white_36dp"
            android:layout_margin="7dp"/>

...
